Changed styling ot team link in MyTeams

--- a/frontend/src/scss/components/TeamDashboard.module.scss
+++ b/frontend/src/scss/components/TeamDashboard.module.scss
@@ -9,6 +9,11 @@
 	flex-direction: column;
 }
 
+a {
+	text-decoration: none;
+	color: black;
+}
+
 .teamMembersList .row {
 	border: 1px solid grey;
 	border-radius: 10px;
