--- a/frontend/src/css/components/MyTeams.module.css
+++ b/frontend/src/css/components/MyTeams.module.css
@@ -1,6 +1,13 @@
-.myTeams {
+.MyTeams {
   display: flex;
-  flex-direction: column; }
+  flex-direction: row;
+  justify-content: center; }
+
+.leftContainer {
+  padding: 20px; }
+
+.rightContainer {
+  padding: 20px; }
 
 .teamsListContainer {
   width: 300px;
@@ -12,3 +19,6 @@
   border-radius: 10px;
   padding: 0 12px 0 12px;
   margin-bottom: 10px; }
+
+.teamActionItem {
+  margin: 10px; }
