--- a/frontend/src/scss/components/MyTeams.module.scss
+++ b/frontend/src/scss/components/MyTeams.module.scss
@@ -1,6 +1,15 @@
-.myTeams {
+.MyTeams {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.leftContainer {
+	padding: 20px;
+}
+
+.rightContainer {
+	padding: 20px;
 }
 
 .teamsListContainer {
@@ -14,4 +23,8 @@
 	border-radius: 10px;
 	padding: 0 12px 0 12px;
 	margin-bottom: 10px;
+}
+
+.teamActionItem {
+	margin: 10px;
 }
