--- a/frontend/src/scss/components/AccountNavMenu.module.scss
+++ b/frontend/src/scss/components/AccountNavMenu.module.scss
@@ -3,14 +3,16 @@
 	width: 150px;
 	border: 1px solid black;
 	border-radius: 3px;
-	background-color: #e1e4e8;
+	// background-color: #fafbfc;
+	background-color: rgba(201, 203, 206, 1);
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 }
 
 .topRow {
-	border-bottom: #ccc;
+	width: 100%;
+	border-bottom: 1px solid black;
 }
 
 .row {
@@ -21,6 +23,7 @@
 		margin: 0;
 		font-family: "Helvetica", "Arial", "sans-serif";
 		font-size: 12px;
+		text-decoration: none;
 	}
 
 	.subText {
