--- a/frontend/src/css/components/AccountNavMenu.module.css
+++ b/frontend/src/css/components/AccountNavMenu.module.css
@@ -1,16 +1,34 @@
+.AccountNavMenu {
+  position: relative; }
+
+.dropdownContainer:before {
+  z-index: 100;
+  content: '';
+  position: absolute;
+  top: -10px;
+  right: 10px;
+  left: auto;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 10px 10px 10px;
+  border-color: transparent transparent #f0ecec transparent; }
+
 .dropdownContainer {
-  z-index: 1;
+  z-index: 100;
+  position: absolute;
+  top: 35px;
+  right: 0;
   width: 150px;
-  border: 1px solid black;
   border-radius: 3px;
-  background-color: #c9cbce;
+  background-color: #f0ecec;
   display: flex;
   flex-direction: column;
   align-items: flex-start; }
 
 .topRow {
   width: 100%;
-  border-bottom: 1px solid black; }
+  border-bottom: 1px solid #bdb8b8; }
 
 .row {
   width: 100%;
