--- a/frontend/src/scss/components/AccountNavMenu.module.scss
+++ b/frontend/src/scss/components/AccountNavMenu.module.scss
@@ -1,10 +1,42 @@
+.AccountNavMenu {
+	position: relative;
+}
+
+.dropdownContainer:before {
+	z-index: 100;
+	content: '';
+	position: absolute;
+	top: -10px;
+	right: 10px;
+	left: auto;
+	width: 0;
+	height: 0;
+	// border: 8px solid transparent;
+	// border-bottom-color: rgba(27, 31, 35, .15);
+	border-style: solid;
+	border-width: 0 10px 10px 10px;
+	border-color: transparent transparent #f0ecec transparent;
+}
+
+// .dropdownContainer:after {
+// 	content: '';
+// 	position: absolute;
+// 	top: -14px;
+// 	right: 10px;
+// 	left: auto;
+// 	border: 7px solid transparent;
+// 	border-bottom-color: #fff;
+// }
+
 .dropdownContainer {
-	z-index: 1;
+	z-index: 100;
+	position: absolute;
+	top: 35px;
+	right: 0;
 	width: 150px;
-	border: 1px solid black;
 	border-radius: 3px;
-	// background-color: #fafbfc;
-	background-color: rgba(201, 203, 206, 1);
+	background-color: #f0ecec;
+	// background-color: rgba(201, 203, 206, 1);
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -12,7 +44,7 @@
 
 .topRow {
 	width: 100%;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #bdb8b8;
 }
 
 .row {
