--- a/frontend/src/css/components/AccountNavMenu.module.css
+++ b/frontend/src/css/components/AccountNavMenu.module.css
@@ -1,5 +1,10 @@
 .AccountNavMenu {
-  position: relative; }
+  position: relative;
+  margin: 3px 0 0 0; }
+
+.menuBtn {
+  margin: auto 10px auto 10px;
+  cursor: pointer; }
 
 .dropdownContainer:before {
   z-index: 100;
