--- a/frontend/src/scss/components/AccountNavMenu.module.scss
+++ b/frontend/src/scss/components/AccountNavMenu.module.scss
@@ -1,5 +1,11 @@
 .AccountNavMenu {
 	position: relative;
+	margin: 3px 0 0 0;
+}
+
+.menuBtn {
+	margin: auto 10px auto 10px;
+	cursor: pointer;
 }
 
 .dropdownContainer:before {
@@ -11,8 +17,6 @@
 	left: auto;
 	width: 0;
 	height: 0;
-	// border: 8px solid transparent;
-	// border-bottom-color: rgba(27, 31, 35, .15);
 	border-style: solid;
 	border-width: 0 10px 10px 10px;
 	border-color: transparent transparent #f0ecec transparent;
@@ -36,7 +40,6 @@
 	width: 150px;
 	border-radius: 3px;
 	background-color: #f0ecec;
-	// background-color: rgba(201, 203, 206, 1);
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
