--- a/frontend/src/scss/components/TeamDashboard.module.scss
+++ b/frontend/src/scss/components/TeamDashboard.module.scss
@@ -20,3 +20,13 @@ a {
 	padding: 0 12px 0 12px;
 	margin-bottom: 10px;
 }
+
+.teamActionsContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+
+	.actionItem {
+		margin: 5px 0 5px 0;
+	}
+}
