Created get notes endpoint and receiving data on frontend

--- a/frontend/src/css/components/TeamDashboard.module.css
+++ b/frontend/src/css/components/TeamDashboard.module.css
@@ -1,6 +1,14 @@
 .TeamDashboard {
   display: flex;
-  flex-direction: column; }
+  justify-content: flex-start; }
+
+.leftContainer {
+  padding: 10px;
+  width: 40%; }
+
+.rightContainer {
+  padding: 20px;
+  width: 60%; }
 
 .teamMembersContainer {
   width: 300px;
