--- a/frontend/src/scss/components/TeamDashboard.module.scss
+++ b/frontend/src/scss/components/TeamDashboard.module.scss
@@ -1,6 +1,16 @@
 .TeamDashboard {
 	display: flex;
-	flex-direction: column;
+	justify-content: flex-start;
+}
+
+.leftContainer {
+	padding: 10px;
+	width: 40%;
+}
+
+.rightContainer {
+	padding: 20px;
+	width: 60%;
 }
 
 .teamMembersContainer {
