--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,10 @@
+.App {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+}
 
+/* .belowNavContainer {
+	height: 100vh;
+} */
