--- a/frontend/src/scss/components/TeamNotes.module.scss
+++ b/frontend/src/scss/components/TeamNotes.module.scss
@@ -1,11 +1,14 @@
 .TeamNotes {
-	padding: 10px 3px 0 10px;
+	padding: 0px 3px 0 10px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 }
 
+h4 {
+	margin: 5px;
+}
 .newNoteForm {
 	height: 150px;
 	padding: 0 10px 0 10px;
