--- a/frontend/src/components/TeamDashboard/TeamNotes/styles/NotesList.module.scss
+++ b/frontend/src/components/TeamDashboard/TeamNotes/styles/NotesList.module.scss
@@ -3,6 +3,7 @@
 	overflow-y: scroll;
 	padding: 5px;
 	margin: 0 0 12px 0;
-	border-radius: 5px;
 	background-color: #ebecf0;
+	border: 5px solid #ebecf0;
+	border-radius: 5px;
 }
